Modification et ajout de commentaires dans les fichiers concernés

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -640,7 +640,7 @@ section {
         padding: 1.5rem 3rem;
     }
 
-    /* BURGER - Caché en desktop */
+    /* Menu burger - caché en desktop */
     .burger-menu {
         display: none;
     }
