Je remplace les liens de réseaux sociaux dans le footer par les mentions légales et d'autres infos + je sors la balise du bouton de sa div form-navigation pour que le bouton de soumission soit visible en dessous de la dernière étape + je remanie quelques commentaires du fichier style.css

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -195,7 +195,7 @@ section {
     box-shadow: 0 6px 15px rgba(255, 107, 53, 0.4);
 }
 
-/* la flèche qui pointe vers le bas */
+
 .arrow-down {
     width: 30px;
     height: 30px;
@@ -887,7 +887,7 @@ section {
         font-size: 1rem;
     }
 
-    /* TESTIMONIALS */
+    /* Témoignages clients */
     .review {
         padding: 2rem;
     }
