je change la disposition des éléments dans le footer, je passe d'une disposition en ligne en colonne

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1682,7 +1682,7 @@ a {
     
     /* Footer tablette */
     .footer .container {
-        flex-direction: row;
+        flex-direction: column;
         justify-content: space-between;
         align-items: center;
     }
