réduction du padding au niveau du header en desktop

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1708,7 +1708,7 @@ a {
     
     /* Header desktop */
     .header {
-        padding: var(--spacing-sm) var(--spacing-xl);
+        padding: var(--spacing-xs) var(--spacing-xl);
     }
     
     /* Logo desktop */
