--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1789,9 +1789,15 @@ a {
         margin-right: auto;
     }
 
-    .important{
-        color:#0fff02;
+    .important-text1{
+        color:#8ffc89;
+        padding: 1.25rem;
+    }
+
+    .important-text2{
+        color: #ff7f4f;
         padding: 1rem;
+        font-size: 1.25rem;
     }
     
     /* Titre grille desktop */
