Je corrige un problème de scrolls sur le formulaire

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -598,6 +598,11 @@ a {
 
 /* CALCULATEUR */
 
+#calculator {
+    scroll-margin-top: 6rem; /* ajuste selon ton header */
+}
+
+
 /* Boite calculateur */
 .calculator-box {
     background: white;
