--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -232,7 +232,7 @@ a {
     position: fixed;
     bottom: 1.5rem;
     right: 1.5rem;
-    background: #00ff11;;
+    background: #b1ff58;
     color: rgb(91, 91, 91);
     padding: 1rem 1.5rem;
     border-radius: 50px;
@@ -330,7 +330,7 @@ a {
 }
 
 .hero-highlight {
-    color: #00ff11;
+    color: #55EFC4;
     font-size: 1.1em;
     display: block;
     margin-bottom: 0.25rem;
@@ -462,7 +462,7 @@ a {
     display: block;
     font-size: 1.5rem;
     font-weight: 800;
-    color: #00ff11;
+    color: #55EFC4;
     text-shadow: 0 2px 10px rgba(85, 239, 196, 0.3);
 }
 
